--- a/How-to-write-jQuery-plugin/jquery.Plugin.prototype/test.html
+++ b/How-to-write-jQuery-plugin/jquery.Plugin.prototype/test.html
@@ -9,14 +9,14 @@
 <body>
 <script>
     $(function(){
-        $('h1').test({
+        $('.test').test({
             bcolor : "#eea",
             fcolor : "red"
         });
     });
 </script>
-<h1>TEST</h1>
-<h1>TEST</h1>
-<h1>TEST</h1>
+<h1 class="test">TEST</h1>
+<h1 class="test">TEST</h1>
+<h1 class="test">TEST</h1>
 </body>
 </html>
