--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="ui/css/gallery.css"/>
     <script src="jquery-1.8.3.js"></script>
     <script src="jquery.mousewheel.js"></script>
-    <script src="jquery.gallery.js"></script>
+    <script src="jquery.gallery.pro.js"></script>
     <script src="gallery.js"></script>
     <!--[if IE]>
     <style type="text/css">
