--- a/backbone-branch-wzx/examples/todos/demo1.html
+++ b/backbone-branch-wzx/examples/todos/demo1.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>the5fire.com-backbone.js-Hello World</title>
+    <title>backbone.js-Hello World</title>
     <meta charset="utf-8">
 </head>
 <body>
 <button id="check">新手报到</button>
 <ul id="world-list">
 </ul>
-<script src="http://the5fireblog.b0.upaiyun.com/staticfile/jquery-1.10.2.js"></script>
-<script src="http://the5fireblog.b0.upaiyun.com/staticfile/underscore.js"></script>
-<script src="http://the5fireblog.b0.upaiyun.com/staticfile/backbone.js"></script>
+<script src="../../test/vendor/jquery.js"></script>
+<script src="../../test/vendor/underscore.js"></script>
+<script src="../../backbone.js"></script>
 <script>
     (function ($) {
         World = Backbone.Model.extend({
