--- a/todomvc-jquery/ind.html
+++ b/todomvc-jquery/ind.html
@@ -17,7 +17,21 @@
 				<label for="toggle-all">Mark all as complete</label>
 				<ul id="todo-list"></ul>
 			</section>
-			<footer id="footer"></footer>
+            <footer id="footer">
+                <span id="todo-count"><strong></strong> item left</span>
+                <ul id="filters">
+                    <li>
+                        <a class="selected" href="#all">All</a>
+                    </li>
+                    <li>
+                        <a href="#active">Active</a>
+                    </li>
+                    <li>
+                        <a href="#completed">Completed</a>
+                    </li>
+                </ul>
+                <button id="clear-completed" style="display: none">Clear completed</button>
+            </footer>
 		</section>
 		<footer id="info">
 			<p>Double-click to edit a todo</p>
