--- a/assets/html/login.html
+++ b/assets/html/login.html
@@ -7,11 +7,24 @@
 </head>
 <body>
 <div class="zc_header">
-    <a href="#" class="zc_logo"><img src="../ui/images/logo_assets.png" width="248" height="30" class="zc_logo_img"></a></a>
+    <a href="#" class="zc_logo"><img src="../ui/images/logo_assets.png" width="248" height="30" class="zc_logo_img"></a>
 </div>
-<div class="zc_con">
-
+<div class="zc_con pt210">
+    <div class="zc_login">
+        <p class="zc_login_h">用户登录</p>
+        <form method="get" action="#" class="zc_login_fm">
+            <p><input type="text" name="user" class="zc_login_in"></p>
+            <p><input type="password" name="pass" class="zc_login_in zc_login_in2"></p>
+            <p>
+                <a href="#" class="zc_login_fg">忘记密码</a>
+                <input type="submit" value="登 录" class="zc_login_sub">
+            </p>
+        </form>
+    </div>
 </div>
-<script src="../lib/require.js" data-main="../src/login" async defer></script>
+<div class="zc_footer">
+    <p>Copyright 2002-2015 All rights reserved</p>
+    <p>版权所有：世纪闻康科技发展有限公司</p>
+</div>
 </body>
 </html>
