--- a/assets/html/idc.html
+++ b/assets/html/idc.html
@@ -37,10 +37,72 @@
                 <div class="zc_inleft">
                     <div class="zc_intop">
                         <p class="zc_til02"><a href="#" class="zc_btn">编辑</a>机房名称(12)</p>
-                        <br><br><br>
+                        <div class="zc_indiv">
+                            <p><label for="lxr">联系人：</label><input type="text" name="lxr" id="lxr" class="zc_in" value=""><label for="phone">电话：</label><input type="text" name="phone" id="phone" class="zc_in" value=""></p>
+                            <p><label for="tgs">提供商：</label><input type="text" name="tgs" id="tgs" class="zc_in" value=""><label for="beiz">备注：</label><input type="text" name="beiz" id="beiz" class="zc_in" value=""></p>
+                            <p><label for="dz">地&nbsp;&nbsp;&nbsp;址：</label><input type="text" name="dz" id="dz" class="zc_in w420" value=""></p>
+                        </div>
+                    </div>
+                    <div class="zc_inbom">
+                        <div class="zc_bom_til">
+                            <div class="zc_til03 zc_bom_left">
+                                <a href="#" class="zc_btn">添加</a>机房区域(12)
+                            </div>
+                            <div class="zc_til03 zc_bom_right">
+                                <a href="#" class="zc_btn">添加</a>机柜(12)
+                            </div>
+                        </div>
+                        <div class="fix">
+                            <ul class="zc_list2">
+                                <li><a href="#">机房区域00</a></li>
+                                <li><a href="#" class="zc_liston">机房区域00</a></li>
+                                <li><a href="#">机房区域00</a></li>
+                                <li><a href="#">机房区域00</a></li>
+                                <li><a href="#">机房区域00</a></li>
+                            </ul>
+                            <div class="zc_bom_r">
+                                <p class="zc_bom_rtil"><span class="zc_sp01">名称</span><em>|</em><span class="zc_sp02">Unit</span><em>|</em><span class="zc_sp03">服务器数量</span></p>
+                                <ul>
+                                    <li><span class="zc_sp01">寻医机房东北地区</span><em>|</em><span class="zc_sp02">9999</span><em>|</em><span class="zc_sp03">9999</span></li>
+                                    <li><span class="zc_sp01">寻医机房东北地区</span><em>|</em><span class="zc_sp02">9999</span><em>|</em><span class="zc_sp03">9999</span></li>
+                                    <li><span class="zc_sp01">寻医机房东北地区</span><em>|</em><span class="zc_sp02">9999</span><em>|</em><span class="zc_sp03">9999</span></li>
+                                    <li><span class="zc_sp01">寻医机房东北地区</span><em>|</em><span class="zc_sp02">9999</span><em>|</em><span class="zc_sp03">9999</span></li>
+                                    <li><span class="zc_sp01">寻医机房东北地区</span><em>|</em><span class="zc_sp02">9999</span><em>|</em><span class="zc_sp03">9999</span></li>
+                                    <li><span class="zc_sp01">寻医机房东北地区</span><em>|</em><span class="zc_sp02">9999</span><em>|</em><span class="zc_sp03">9999</span></li>
+                                    <li><span class="zc_sp01">寻医机房东北地区</span><em>|</em><span class="zc_sp02">9999</span><em>|</em><span class="zc_sp03">9999</span></li>
+                                    <li><span class="zc_sp01">寻医机房东北地区</span><em>|</em><span class="zc_sp02">9999</span><em>|</em><span class="zc_sp03">9999</span></li>
+                                    <li><span class="zc_sp01">寻医机房东北地区</span><em>|</em><span class="zc_sp02">9999</span><em>|</em><span class="zc_sp03">9999</span></li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="zc_inright">
+                    <div class="zc_inrout">
+                        <div class="zc_til04">
+                            <p class="zc_inrtab"><a href="#" class="zc_inrtabon">外网IP(28)</a><a href="#">外网IP(64)</a><a href="#" class="nobg">管理网IP(28)</a></p>
+                            <a href="#" class="zc_btn">添加</a>
+                        </div>
+                        <ul class="zc_lp">
+                            <li><span class="zc_lp00">未使用</span><em>|</em><span class="zc_lp02">192.168.123.123</span><em>|</em><span class="zc_lp03">192.168.123.123</span></li>
+                            <li><span class="zc_lp00 zc_lp01">使用中</span><em>|</em><span class="zc_lp02">192.168.123.123</span><em>|</em><span class="zc_lp03">192.168.123.123</span></li>
+                            <li><span class="zc_lp00">未使用</span><em>|</em><span class="zc_lp02">192.168.123.123</span><em>|</em><span class="zc_lp03">192.168.123.123</span></li>
+                            <li><span class="zc_lp00 zc_lp01">使用中</span><em>|</em><span class="zc_lp02">192.168.123.123</span><em>|</em><span class="zc_lp03">192.168.123.123</span></li>
+                            <li><span class="zc_lp00">未使用</span><em>|</em><span class="zc_lp02">192.168.123.123</span><em>|</em><span class="zc_lp03">192.168.123.123</span></li>
+                            <li><span class="zc_lp00 zc_lp01">使用中</span><em>|</em><span class="zc_lp02">192.168.123.123</span><em>|</em><span class="zc_lp03">192.168.123.123</span></li>
+                            <li><span class="zc_lp00">未使用</span><em>|</em><span class="zc_lp02">192.168.123.123</span><em>|</em><span class="zc_lp03">192.168.123.123</span></li>
+                            <li><span class="zc_lp00 zc_lp01">使用中</span><em>|</em><span class="zc_lp02">192.168.123.123</span><em>|</em><span class="zc_lp03">192.168.123.123</span></li>
+                            <li><span class="zc_lp00">未使用</span><em>|</em><span class="zc_lp02">192.168.123.123</span><em>|</em><span class="zc_lp03">192.168.123.123</span></li>
+                            <li><span class="zc_lp00 zc_lp01">使用中</span><em>|</em><span class="zc_lp02">192.168.123.123</span><em>|</em><span class="zc_lp03">192.168.123.123</span></li>
+                            <li><span class="zc_lp00">未使用</span><em>|</em><span class="zc_lp02">192.168.123.123</span><em>|</em><span class="zc_lp03">192.168.123.123</span></li>
+                            <li><span class="zc_lp00 zc_lp01">使用中</span><em>|</em><span class="zc_lp02">192.168.123.123</span><em>|</em><span class="zc_lp03">192.168.123.123</span></li>
+                            <li><span class="zc_lp00">未使用</span><em>|</em><span class="zc_lp02">192.168.123.123</span><em>|</em><span class="zc_lp03">192.168.123.123</span></li>
+                            <li><span class="zc_lp00 zc_lp01">使用中</span><em>|</em><span class="zc_lp02">192.168.123.123</span><em>|</em><span class="zc_lp03">192.168.123.123</span></li>
+                            <li><span class="zc_lp00">未使用</span><em>|</em><span class="zc_lp02">192.168.123.123</span><em>|</em><span class="zc_lp03">192.168.123.123</span></li>
+                            <li><span class="zc_lp00 zc_lp01">使用中</span><em>|</em><span class="zc_lp02">192.168.123.123</span><em>|</em><span class="zc_lp03">192.168.123.123</span></li>
+                        </ul>
+
+                    </div>
 
                 </div>
             </div>
