--- a/assets/html/add.html
+++ b/assets/html/add.html
@@ -20,7 +20,7 @@
 </div>
 <div class="zc_con2">
     <div class="zc_con_in">
-        <p class="zc_snav"><a href="#" class="zc_snavon">资产添加</a><a href="#">批量添加</a></p>
+        <p class="zc_snav"><a href="#" class="zc_snava zc_snavon">资产添加</a><a href="#" class="zc_snava">批量添加</a></p>
         <div class="zc_layout zc_layout_nobg">
             <span class="zc_tj zc_tj01"></span>
             <div class="zc_til04">
