--- a/assets/html/idc.html
+++ b/assets/html/idc.html
@@ -20,7 +20,7 @@
 </div>
 <div class="zc_con2">
     <div class="zc_con_in">
-        <p class="zc_snav"><a href="#" class="zc_snavon">IDC管理</a><a href="#">服务类型</a><a href="#">部门业务</a></p>
+        <p class="zc_snav"><a href="#" class="zc_snava zc_snavon">IDC管理</a><a href="#" class="zc_snava">服务类型</a><a href="#" class="zc_snava">部门业务</a></p>
         <div class="zc_layout">
             <span class="zc_tj zc_tj01"></span>
             <div class="zc_outleft">
