--- a/assets/html/service.html
+++ b/assets/html/service.html
@@ -20,7 +20,7 @@
 </div>
 <div class="zc_con2">
     <div class="zc_con_in">
-        <p class="zc_snav"><a href="#">IDC管理</a><a href="#">服务类型</a><a href="#" class="zc_snavon">部门业务</a></p>
+        <p class="zc_snav"><a href="#" class="zc_snava">IDC管理</a><a href="#" class="zc_snava zc_snavon">服务类型</a><a href="#" class="zc_snava ">部门业务</a></p>
         <div class="zc_layout zc_layout_nobg">
             <span class="zc_tj zc_tj02"></span>
             <p class="zc_til02"><a href="#" class="zc_btn">添加</a>业务描述</p>
