--- a/assets/html/device.html
+++ b/assets/html/device.html
@@ -46,11 +46,23 @@
                     </div>
                 </div>
             </div>
-            <ul class="zc_lp">
-                <li><span class="zc_lp00">未使用</span><em>|</em><span class="zc_lp02">192.168.123.123</span><em>|</em><span class="zc_lp03">192.168.123.123</span></li>
-                <li><span class="zc_lp00">未使用</span><em>|</em><span class="zc_lp02">192.168.123.123</span><em>|</em><span class="zc_lp03">192.168.123.123</span></li>
-                <li><span class="zc_lp00">未使用</span><em>|</em><span class="zc_lp02">192.168.123.123</span><em>|</em><span class="zc_lp03">192.168.123.123</span></li><li><span class="zc_lp00">未使用</span><em>|</em><span class="zc_lp02">192.168.123.123</span><em>|</em><span class="zc_lp03">192.168.123.123</span></li>
+            <ul class="zc_fp">
+                <li><span class="zc_fp1 zc_fp01">X0000001</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp02">X0000001</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp03">X0000001</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp04">X0000001</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp01">X0000001</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp02">X0000001</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp03">X0000001</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp04">X0000001</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp01">X0000001</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp02">X0000001</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp03">X0000001</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp04">X0000001</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp01">X0000001</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp02">X0000001</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
             </ul>
+            <p class="zc_page"><a href="#" class="zc_pa zc_paon">1</a><a href="#" class="zc_pa">2</a><a href="#" class="zc_pa">3</a><a href="#" class="zc_pa">4</a><a href="#" class="zc_pa">5</a><a href="#" class="zc_pa">6</a><a href="#" class="zc_next">下一页</a></p>
         </div>
     </div>
 </div>
