--- a/assets/html/author.html
+++ b/assets/html/author.html
@@ -72,13 +72,13 @@
                     <div class="zc_aname">
                         <span class="zc_spa">权  限：</span>
                         <div class="ant-select ant-select2">
-                            <span class="ant-selected-text"><em>所有权限</em><i></i></span>
+                            <span class="ant-selected-text"><em>所有权限00</em><i></i></span>
                             <div class="ant-select-item" style="display: none">
                                 <ul class="ant-select-list">
-                                    <li><a href="javascript:;">所有权限</a></li>
-                                    <li><a href="javascript:;">所有权限</a></li>
-                                    <li><a href="javascript:;">所有权限</a></li>
-                                    <li><a href="javascript:;">所有权限</a></li>
+                                    <li><a href="javascript:;">所有权限01</a></li>
+                                    <li><a href="javascript:;">所有权限02</a></li>
+                                    <li><a href="javascript:;">所有权限03</a></li>
+                                    <li><a href="javascript:;">所有权限04</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -96,6 +96,6 @@
     <p>Copyright 2002-2015 All rights reserved</p>
     <p>版权所有：世纪闻康科技发展有限公司</p>
 </div>
-<script src="../lib/require.js" data-main="../src/assets" async defer></script>
+<script src="../lib/require.js" data-main="../src/author_main" async defer></script>
 </body>
 </html>
