--- a/assets/html/device.html
+++ b/assets/html/device.html
@@ -21,12 +21,12 @@
 <div class="zc_con2">
     <div class="zc_con_in">
         <p class="zc_snav"><span class="zc_snav_btm"><a href="#"><img src="../ui/images/btn01.png" width="108" height="32"></a> 　<a href="#"><img src="../ui/images/btn02.png" width="108" height="32"></a></span><a href="#" class="zc_snava zc_snavon">服务器<em>9999</em></a><a href="#" class="zc_snava">网络设备<em>200</em></a><a href="#" class="zc_snava">耗材<em>200</em></a><a href="#" class="zc_snava">配件<em>200</em></a></p>
-        <div class="zc_layout zc_layout_nobg">
+        <div class="zc_layout zc_layout_nobg tab_box01">
             <span class="zc_tj zc_tj01"></span>
             <div class="zc_tils">
                 <p class="zc_tidc">IDC机房</p>
                 <p class="zc_inrtabs"><a href="#">厂家</a><a href="#">配置</a><a href="#" class="zc_inrtabon">IDC</a><a href="#">时间</a><a href="#" class="nobg">用处</a></p>
-                <div class="ant-search-bar ant-search-bar-drop" style="z-index:2;">
+                <div class="ant-search-bar ant-search-bar-drop">
                     <form action="">
                         <div class="ant-search-wrap">
                             <div class="ant-search-bdr">
@@ -36,17 +36,17 @@
                         </div>
                     </form>
                     <div class="ant-search-bar-dropcon">
-                        <span class="ant-search-bar-dropin">状态</span>
+                        <span class="ant-search-bar-dropin">状态00</span>
                         <span class="ant-search-bar-dropicon"></span>
-                        <ul class="ant-search-bar-droplist">
-                            <li><a href="javascript:;">状态</a></li>
-                            <li><a href="javascript:;">状态</a></li>
-                            <li><a href="javascript:;">状态</a></li>
+                        <ul class="ant-search-bar-droplist dn">
+                            <li><a href="javascript:;">状态01</a></li>
+                            <li><a href="javascript:;">状态02</a></li>
+                            <li><a href="javascript:;">状态03</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
-            <ul class="zc_fp">
+            <ul class="zc_fp dn panel">
                 <li><span class="zc_fp1 zc_fp01">X0000001</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
                 <li><span class="zc_fp1 zc_fp02">X0000001</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
                 <li><span class="zc_fp1 zc_fp03">X0000001</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
@@ -62,6 +62,70 @@
                 <li><span class="zc_fp1 zc_fp01">X0000001</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
                 <li><span class="zc_fp1 zc_fp02">X0000001</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
             </ul>
+            <ul class="zc_fp dn panel">
+                <li><span class="zc_fp1 zc_fp01">X0000002</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp02">X0000002</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp03">X0000002</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp04">X0000002</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp01">X0000002</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp02">X0000002</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp03">X0000002</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp04">X0000002</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp01">X0000002</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp02">X0000002</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp03">X0000002</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp04">X0000002</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp01">X0000002</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp02">X0000002</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+            </ul>
+            <ul class="zc_fp dn panel">
+                <li><span class="zc_fp1 zc_fp01">X0000003</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp02">X0000003</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp03">X0000003</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp04">X0000003</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp01">X0000003</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp02">X0000003</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp03">X0000003</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp04">X0000003</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp01">X0000003</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp02">X0000003</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp03">X0000003</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp04">X0000003</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp01">X0000003</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp02">X0000003</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+            </ul>
+            <ul class="zc_fp dn panel">
+                <li><span class="zc_fp1 zc_fp01">X0000004</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp02">X0000004</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp03">X0000004</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp04">X0000004</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp01">X0000004</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp02">X0000004</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp03">X0000004</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp04">X0000004</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp01">X0000004</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp02">X0000004</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp03">X0000004</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp04">X0000004</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp01">X0000004</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp02">X0000004</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+            </ul>
+            <ul class="zc_fp dn panel">
+                <li><span class="zc_fp1 zc_fp01">X0000005</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp02">X0000005</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp03">X0000005</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp04">X0000005</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp01">X0000005</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp02">X0000005</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp03">X0000005</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp04">X0000005</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp01">X0000005</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp02">X0000005</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp03">X0000005</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp04">X0000005</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp01">X0000005</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+                <li><span class="zc_fp1 zc_fp02">X0000005</span><span>SN</span><em>|</em><span>设备型号</span><em>|</em><span>品牌</span></li>
+            </ul>
             <p class="zc_page"><a href="#" class="zc_pa zc_paon">1</a><a href="#" class="zc_pa">2</a><a href="#" class="zc_pa">3</a><a href="#" class="zc_pa">4</a><a href="#" class="zc_pa">5</a><a href="#" class="zc_pa">6</a><a href="#" class="zc_next">下一页</a></p>
         </div>
     </div>
@@ -70,6 +134,6 @@
     <p>Copyright 2002-2015 All rights reserved</p>
     <p>版权所有：世纪闻康科技发展有限公司</p>
 </div>
-<script src="../lib/require.js" data-main="../src/assets" async defer></script>
+<script src="../lib/require.js" data-main="../src/device_main" async defer></script>
 </body>
 </html>
