--- a/assets/html/add.html
+++ b/assets/html/add.html
@@ -23,22 +23,71 @@
         <p class="zc_snav"><a href="#" class="zc_snava zc_snavon">资产添加</a><a href="#" class="zc_snava">批量添加</a></p>
         <div class="zc_layout zc_layout_nobg">
             <span class="zc_tj zc_tj01"></span>
-            <div class="zc_til04">
-                <p class="zc_inrtab zc_inrtab02"><a href="#" class="zc_inrtabon">服务器</a><a href="#">网络设备</a><a href="#">耗材</a><a href="#" class="nobg">配件</a></p>
+            <div class="tab_box01">
+                <div class="zc_til04">
+                    <p class="zc_inrtab zc_inrtab02"><a href="#" class="zc_inrtabon">服务器</a><a href="#">网络设备</a><a href="#">耗材</a><a href="#" class="nobg">配件</a></p>
+                </div>
+                <div class="dn panel">
+                    <p class="zc_addp">字段类别01</p>
+                    <div class="zc_zd">
+                        <em>字段01：</em>
+                        <span><input type="text" class="zc_in"/>注意事项或提示</span>
+                        <em>字段01：</em>
+                    </div>
+                    <p class="zc_addp">字段类别01</p>
+                    <div class="zc_zd">
+                        <em>字段01：</em>
+                        <span><input type="text" class="zc_in"/>注意事项或提示</span>
+                        <em>字段01：</em>
+                    </div>
+                    <div class="zc_divqd"><input type="button" value="确定" class="zc_queding"/></div>
+                </div>
+                <div class="dn panel">
+                    <p class="zc_addp">字段类别01</p>
+                    <div class="zc_zd">
+                        <em>字段02：</em>
+                        <span><input type="text" class="zc_in"/>注意事项或提示</span>
+                        <em>字段01：</em>
+                    </div>
+                    <p class="zc_addp">字段类别01</p>
+                    <div class="zc_zd">
+                        <em>字段01：</em>
+                        <span><input type="text" class="zc_in"/>注意事项或提示</span>
+                        <em>字段01：</em>
+                    </div>
+                    <div class="zc_divqd"><input type="button" value="确定" class="zc_queding"/></div>
+                </div>
+                <div class="dn panel">
+                    <p class="zc_addp">字段类别01</p>
+                    <div class="zc_zd">
+                        <em>字段03：</em>
+                        <span><input type="text" class="zc_in"/>注意事项或提示</span>
+                        <em>字段01：</em>
+                    </div>
+                    <p class="zc_addp">字段类别01</p>
+                    <div class="zc_zd">
+                        <em>字段01：</em>
+                        <span><input type="text" class="zc_in"/>注意事项或提示</span>
+                        <em>字段01：</em>
+                    </div>
+                    <div class="zc_divqd"><input type="button" value="确定" class="zc_queding"/></div>
+                </div>
+                <div class="dn panel">
+                    <p class="zc_addp">字段类别01</p>
+                    <div class="zc_zd">
+                        <em>字段04：</em>
+                        <span><input type="text" class="zc_in"/>注意事项或提示</span>
+                        <em>字段01：</em>
+                    </div>
+                    <p class="zc_addp">字段类别01</p>
+                    <div class="zc_zd">
+                        <em>字段01：</em>
+                        <span><input type="text" class="zc_in"/>注意事项或提示</span>
+                        <em>字段01：</em>
+                    </div>
+                    <div class="zc_divqd"><input type="button" value="确定" class="zc_queding"/></div>
+                </div>
             </div>
-            <p class="zc_addp">字段类别01</p>
-            <div class="zc_zd">
-                <em>字段01：</em>
-                <span><input type="text" class="zc_in"/>注意事项或提示</span>
-                <em>字段01：</em>
-            </div>
-            <p class="zc_addp">字段类别01</p>
-            <div class="zc_zd">
-                <em>字段01：</em>
-                <span><input type="text" class="zc_in"/>注意事项或提示</span>
-                <em>字段01：</em>
-            </div>
-            <div class="zc_divqd"><input type="button" value="确定" class="zc_queding"/></div>
         </div>
     </div>
 </div>
@@ -46,6 +95,6 @@
     <p>Copyright 2002-2015 All rights reserved</p>
     <p>版权所有：世纪闻康科技发展有限公司</p>
 </div>
-<script src="../lib/require.js" data-main="../src/assets" async defer></script>
+<script src="../lib/require.js" data-main="../src/add_main" async defer></script>
 </body>
 </html>
