--- a/jikeytang.github.io/slide/13/index.html
+++ b/jikeytang.github.io/slide/13/index.html
@@ -143,8 +143,7 @@
             var ul = container.getElementsByTagName('ul');
             var li = ul[0].getElementsByTagName('li');
             var ul_w = ul[0].offsetWidth;
-            var len = li.length * 2;
-            var page = 4;
+            var page = ul.length;
             var half = (page/2);
             var now = 0;
             var timer = null;
